--- a/ChessAPI/ChessAPI/packages.config
+++ b/ChessAPI/ChessAPI/packages.config
@@ -9,6 +9,9 @@
   <package id="Microsoft.AspNet.WebApi.Core.ru" version="5.2.7" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost.ru" version="5.2.7" targetFramework="net45" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net45" requireReinstallation="true" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net45" />
+  <package id="NETStandard.Library" version="2.0.0" targetFramework="net45" requireReinstallation="true" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net45" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net45" />
 </packages>
